--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -30,64 +30,64 @@ jobs:
             build/*.so
             build/sha256.json
           
-  build-windows:
-    runs-on: windows-latest
-    if: "!contains(github.event.head_commit.message, '[ci skip]')"
-    steps:
-      - uses: actions/checkout@v5
-      - name: Cache Rust dependencies
-        uses: swatinem/rust-cache@v2
-      - uses: dtolnay/rust-toolchain@stable
-      - name: Build Hachimi for Windows
-        run: |
-          cargo build --target x86_64-pc-windows-msvc --target-dir build --release
-          move build\x86_64-pc-windows-msvc\release\hachimi.dll build
+#  build-windows:
+#    runs-on: windows-latest
+#    if: "!contains(github.event.head_commit.message, '[ci skip]')"
+#    steps:
+#      - uses: actions/checkout@v5
+#      - name: Cache Rust dependencies
+#        uses: swatinem/rust-cache@v2
+#      - uses: dtolnay/rust-toolchain@stable
+#      - name: Build Hachimi for Windows
+#        run: |
+#          cargo build --target x86_64-pc-windows-msvc --target-dir build --release
+#          move build\x86_64-pc-windows-msvc\release\hachimi.dll build
 
-      - name: Build Cellar
-        run: |
-          git clone --depth 1 --revision d4c3f79801c8131e26df585766c35e5ce11ec57f https://github.com/Hachimi-Hachimi/Cellar
-          cd Cellar
-          cargo build --target x86_64-pc-windows-msvc --target-dir build --release
-          move build\x86_64-pc-windows-msvc\release\cellar.dll build
-          cd ..
+#      - name: Build Cellar
+#        run: |
+#          git clone --depth 1 --revision d4c3f79801c8131e26df585766c35e5ce11ec57f https://github.com/Hachimi-Hachimi/Cellar
+#          cd Cellar
+#          cargo build --target x86_64-pc-windows-msvc --target-dir build --release
+#          move build\x86_64-pc-windows-msvc\release\cellar.dll build
+#          cd ..
 
-      - name: Check out FunnyHoney
-        run: git clone --depth 1 --revision 418b5348bd9b7376cc7485c591ca69d49aa4d805 https://codeberg.org/LeadRDRK/FunnyHoney.git
+#      - name: Check out FunnyHoney
+#        run: git clone --depth 1 --revision 418b5348bd9b7376cc7485c591ca69d49aa4d805 https://codeberg.org/LeadRDRK/FunnyHoney.git
 
-      - name: Build Installer
-        run: |
-          git clone --depth 1 --revision 552d4afe6b77925519f7b0ee81cc3ee93ce68b13 https://github.com/teiosteppa/Installer
-          copy build\hachimi.dll Installer
-          move Cellar\build\cellar.dll Installer
-          move FunnyHoney\FunnyHoney.exe Installer
-          cd Installer
-          cargo build --target x86_64-pc-windows-msvc --target-dir build --release --features compress_bin
-          cd ..
-          move Installer\build\x86_64-pc-windows-msvc\release\hachimi_installer.exe build
+#      - name: Build Installer
+#        run: |
+#          git clone --depth 1 --revision 552d4afe6b77925519f7b0ee81cc3ee93ce68b13 https://github.com/teiosteppa/Installer
+#          copy build\hachimi.dll Installer
+#          move Cellar\build\cellar.dll Installer
+#          move FunnyHoney\FunnyHoney.exe Installer
+#          cd Installer
+#          cargo build --target x86_64-pc-windows-msvc --target-dir build --release --features compress_bin
+#          cd ..
+#          move Installer\build\x86_64-pc-windows-msvc\release\hachimi_installer.exe build
 
-      - name: Get checksums for Windows binaries
-        shell: bash
-        run: |
-          curl -L "https://github.com/BLAKE3-team/BLAKE3/releases/latest/download/b3sum_windows_x64_bin.exe" -o b3sum.exe
-          DLL_HASH=($(./b3sum.exe build/hachimi.dll | tr -d '\r'))
-          EXE_HASH=($(./b3sum.exe build/hachimi_installer.exe | tr -d '\r'))
-          cat <<EOF > build/blake3.json
+#      - name: Get checksums for Windows binaries
+#        shell: bash
+#        run: |
+#          curl -L "https://github.com/BLAKE3-team/BLAKE3/releases/latest/download/b3sum_windows_x64_bin.exe" -o b3sum.exe
+#          DLL_HASH=($(./b3sum.exe build/hachimi.dll | tr -d '\r'))
+#          EXE_HASH=($(./b3sum.exe build/hachimi_installer.exe | tr -d '\r'))
+#          cat <<EOF > build/blake3.json
           {
-            "hachimi.dll": "$DLL_HASH",
-            "hachimi_installer.exe": "$EXE_HASH"
-          }
-          EOF
+#            "hachimi.dll": "$DLL_HASH",
+#            "hachimi_installer.exe": "$EXE_HASH"
+#          }
+#          EOF
 
-      - name: Upload Windows binaries
-        uses: actions/upload-artifact@v4
-        with:
-          name: windows
-          path: |
-            build/hachimi.dll
-            build/hachimi_installer.exe
+#      - name: Upload Windows binaries
+#        uses: actions/upload-artifact@v4
+#        with:
+#          name: windows
+#          path: |
+#            build/hachimi.dll
+#            build/hachimi_installer.exe
 
   create-release:
-    needs: [build-android, build-windows]
+    needs: [build-android]
     runs-on: ubuntu-latest
     if: "!contains(github.event.head_commit.message, '[ci skip]')"
     steps:
@@ -107,44 +107,44 @@ jobs:
         with:
           path: artifacts
 
-      - name: Create release notes
-        run: |
-          if ! git rev-parse "$LATEST_TAG" >/dev/null 2>&1; then
-            git tag $LATEST_TAG
-          fi
+#      - name: Create release notes
+#        run: |
+#          if ! git rev-parse "$LATEST_TAG" >/dev/null 2>&1; then
+#            git tag $LATEST_TAG
+#          fi
 
-          PREVIOUS_TAG=$(git describe --tags --abbrev=0 "${LATEST_TAG}^")
-          if [ -z "$PREVIOUS_TAG" ]; then
-            PREVIOUS_TAG=$(git rev-list --max-parents=0 HEAD)
-          fi
+#          PREVIOUS_TAG=$(git describe --tags --abbrev=0 "${LATEST_TAG}^")
+#          if [ -z "$PREVIOUS_TAG" ]; then
+#            PREVIOUS_TAG=$(git rev-list --max-parents=0 HEAD)
+#          fi
 
-          echo "## What's Changed" > CHANGELOG.md
-          COMMIT_HASHES=$(git rev-list --no-merges ${PREVIOUS_TAG}..${LATEST_TAG})
+#          echo "## What's Changed" > CHANGELOG.md
+#          COMMIT_HASHES=$(git rev-list --no-merges ${PREVIOUS_TAG}..${LATEST_TAG})
 
-          IFS=$'\n'
+#          IFS=$'\n'
 
-          for hash in $COMMIT_HASHES; do
-            subject=$(git show -s --format=%s $hash)
-            body=$(git show -s --format=%b $hash)
-            author=$(git show -s --format=%an $hash)
-            short_hash=$(git show -s --format=%h $hash)
+#          for hash in $COMMIT_HASHES; do
+#            subject=$(git show -s --format=%s $hash)
+#            body=$(git show -s --format=%b $hash)
+#            author=$(git show -s --format=%an $hash)
+#            short_hash=$(git show -s --format=%h $hash)
 
-            echo "* **$subject**" >> CHANGELOG.md
+#            echo "* **$subject**" >> CHANGELOG.md
 
-            if [ -n "$body" ]; then
-              echo "$body" | while read -r line; do
-                if [ -z "$line" ]; then continue; fi
-                clean_line=$(echo "$line" | sed -E 's/^[ \t]*[-*+][ \t]*//')
-                echo "    * $clean_line" >> CHANGELOG.md
-              done
-            fi
-            echo "    (by @$author in $short_hash)" >> CHANGELOG.md
-            echo "" >> CHANGELOG.md
-          done
+#            if [ -n "$body" ]; then
+#              echo "$body" | while read -r line; do
+#                if [ -z "$line" ]; then continue; fi
+#                clean_line=$(echo "$line" | sed -E 's/^[ \t]*[-*+][ \t]*//')
+#                echo "    * $clean_line" >> CHANGELOG.md
+#              done
+#            fi
+#            echo "    (by @$author in $short_hash)" >> CHANGELOG.md
+#            echo "" >> CHANGELOG.md
+#          done
 
-          unset IFS
-        env:
-          LATEST_TAG: ${{ env.RELEASE_VERSION }}
+#          unset IFS
+#        env:
+#          LATEST_TAG: ${{ env.RELEASE_VERSION }}
 
       - name: Upload binaries to a release
         uses: softprops/action-gh-release@v2
@@ -152,5 +152,5 @@ jobs:
           body_path: CHANGELOG.md
           files: |
             artifacts/android/*
-            artifacts/windows/*
+#            artifacts/windows/*
           tag_name: ${{ env.RELEASE_VERSION }}
