--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -26,9 +26,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: android
-          path: |
-            build/*.so
-            build/sha256.json
+          path: build/*
           
 #  build-windows:
 #    runs-on: windows-latest
