--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -113,38 +113,38 @@ jobs:
             git tag $LATEST_TAG
           fi
 
-#          PREVIOUS_TAG=$(git describe --tags --abbrev=0 "${LATEST_TAG}^")
-#          if [ -z "$PREVIOUS_TAG" ]; then
-#            PREVIOUS_TAG=$(git rev-list --max-parents=0 HEAD)
-#          fi
+          PREVIOUS_TAG=$(git describe --tags --abbrev=0 "${LATEST_TAG}^")
+          if [ -z "$PREVIOUS_TAG" ]; then
+            PREVIOUS_TAG=$(git rev-list --max-parents=0 HEAD)
+          fi
 
-#          echo "## What's Changed" > CHANGELOG.md
-#          COMMIT_HASHES=$(git rev-list --no-merges ${PREVIOUS_TAG}..${LATEST_TAG})
+          echo "## What's Changed" > CHANGELOG.md
+          COMMIT_HASHES=$(git rev-list --no-merges ${PREVIOUS_TAG}..${LATEST_TAG})
 
-#          IFS=$'\n'
+          IFS=$'\n'
 
-#          for hash in $COMMIT_HASHES; do
-#            subject=$(git show -s --format=%s $hash)
-#            body=$(git show -s --format=%b $hash)
-#            author=$(git show -s --format=%an $hash)
-#            short_hash=$(git show -s --format=%h $hash)
+          for hash in $COMMIT_HASHES; do
+            subject=$(git show -s --format=%s $hash)
+            body=$(git show -s --format=%b $hash)
+            author=$(git show -s --format=%an $hash)
+            short_hash=$(git show -s --format=%h $hash)
 
-#            echo "* **$subject**" >> CHANGELOG.md
+             echo "* **$subject**" >> CHANGELOG.md
 
-#            if [ -n "$body" ]; then
-#              echo "$body" | while read -r line; do
-#                if [ -z "$line" ]; then continue; fi
-#                clean_line=$(echo "$line" | sed -E 's/^[ \t]*[-*+][ \t]*//')
-#                echo "    * $clean_line" >> CHANGELOG.md
-#              done
-#            fi
-#            echo "    (by @$author in $short_hash)" >> CHANGELOG.md
-#            echo "" >> CHANGELOG.md
-#          done
+            if [ -n "$body" ]; then
+              echo "$body" | while read -r line; do
+                if [ -z "$line" ]; then continue; fi
+                clean_line=$(echo "$line" | sed -E 's/^[ \t]*[-*+][ \t]*//')
+                echo "    * $clean_line" >> CHANGELOG.md
+              done
+            fi
+            echo "    (by @$author in $short_hash)" >> CHANGELOG.md
+            echo "" >> CHANGELOG.md
+          done
 
-#          unset IFS
-#        env:
-#          LATEST_TAG: ${{ env.RELEASE_VERSION }}
+          unset IFS
+        env:
+          LATEST_TAG: ${{ env.RELEASE_VERSION }}
 
       - name: Upload binaries to a release
         uses: softprops/action-gh-release@v2
