--- a/.github/workflows/create_release2.yml
+++ b/.github/workflows/create_release2.yml
@@ -21,8 +21,8 @@ jobs:
       - uses: dtolnay/rust-toolchain@stable
 
       - name: Build Hachimi for Android
-        env:
-          ANDROID_NDK_ROOT: ${{ env.ANDROID_NDK_LATEST_HOME }} # Pake NDK bawaan GitHub
+#        env:
+#          ANDROID_NDK_ROOT: ${{ env.ANDROID_NDK_LATEST_HOME }} # Pake NDK bawaan GitHub
         run: |
           rustup target add armv7-linux-androideabi aarch64-linux-android
           RELEASE=1 ./tools/android/build.sh
